fixed header background responsive alignment problem
The content on the page would not properly align itself
because of the aboslute position, 100% width header div.

By using a header::before instead, this problem is gone

--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #d2d1d0;
+  background-image: radial-gradient(
+      at 47% 33%,
+      hsla(0, 0%, 99%, 0.655) 0,
+      transparent 59%
+    ),
+    radial-gradient(at 82% 65%, hsla(200, 26%, 91%, 0.589) 0, transparent 55%);
 
   --main-color: hsl(191.93deg 87.37% 37.25%);
   --drop-shadow: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.563));
@@ -35,6 +42,22 @@ body {
   --small-heading: 2rem;
   --med-heading: 2.5rem;
   --big-heading: 4rem;
+}
+
+header::before {
+  content: "";
+  display: block;
+  height: max(20vw, 40%);
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  transform: skew(0, -8deg);
+  transform-origin: top left;
+  background-color: #0891b2;
+  position: absolute;
 }
 
 h1,
@@ -61,24 +84,14 @@ img {
 header,
 main,
 footer {
-  max-width: 1440px;
+  max-width: 1600px;
   align-self: center;
   padding: var(--high-padding);
 }
 
-.background:first-child {
+/* .background:first-child {
   filter: var(--drop-shadow);
-}
-
-.background {
-  position: absolute;
-  background-color: var(--main-color);
-  isolation: isolate;
-  z-index: -1;
-  width: 100vw;
-  height: min(40vw, 200px);
-  transform: scaleY(2.5) scaleX(1.5) rotate(-5deg) translateY(-3.8rem);
-}
+} */
 
 .profile-container {
   display: flex;
@@ -112,7 +125,7 @@ footer {
 }
 
 #about-container {
-  background-color: white;
+  /* background-color: white; */
   opacity: 0.9;
   padding: 1rem;
   box-shadow: var(--box-shadow);
@@ -123,6 +136,9 @@ footer {
   display: flex;
   flex-direction: column;
   gap: var(--low-padding);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
 }
 #about-container > p {
   color: var(--light-text);
@@ -154,14 +170,17 @@ footer {
   margin-top: 1rem;
   display: grid;
   gap: var(--med-padding);
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 }
 
 .card {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  box-shadow: var(--box-shadow);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 12px;
+  border: 2px solid rgba(98, 102, 108, 0.3);
 }
 
 .project-img {
@@ -169,14 +188,15 @@ footer {
   aspect-ratio: 3.5 / 2;
   object-fit: cover;
   object-position: top;
+  border-radius: 12px 12px 0 0;
 }
 
 .project-info {
   padding: 0 1rem 1rem 1rem;
-  background-color: var(--main-color);
   display: flex;
   flex-direction: column;
   height: 100%;
+  border-top: 1px solid black;
 }
 
 .project-title {
